--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="ic_launcher_background">#f56105</color>
+    
+    <!-- Material You Widget Colors - Light Theme -->
+    <!-- Primary colors -->
+    <color name="widget_primary">#6750A4</color>
+    <color name="widget_on_primary">#FFFFFF</color>
+    <color name="widget_primary_container">#EADDFF</color>
+    <color name="widget_on_primary_container">#21005D</color>
+    
+    <!-- Secondary colors -->
+    <color name="widget_secondary">#625B71</color>
+    <color name="widget_on_secondary">#FFFFFF</color>
+    <color name="widget_secondary_container">#E8DEF8</color>
+    <color name="widget_on_secondary_container">#1D192B</color>
+    
+    <!-- Tertiary colors -->
+    <color name="widget_tertiary">#7D5260</color>
+    <color name="widget_on_tertiary">#FFFFFF</color>
+    <color name="widget_tertiary_container">#FFD8E4</color>
+    <color name="widget_on_tertiary_container">#31111D</color>
+    
+    <!-- Error colors -->
+    <color name="widget_error">#B3261E</color>
+    <color name="widget_on_error">#FFFFFF</color>
+    <color name="widget_error_container">#F9DEDC</color>
+    <color name="widget_on_error_container">#410E0B</color>
+    
+    <!-- Surface colors -->
+    <color name="widget_surface">#FFFBFE</color>
+    <color name="widget_surface_variant">#E7E0EC</color>
+    <color name="widget_on_surface">#1C1B1F</color>
+    <color name="widget_on_surface_variant">#49454F</color>
+    <color name="widget_surface_container">#F3EDF7</color>
+    <color name="widget_surface_container_lowest">#FFFFFF</color>
+    
+    <!-- Other colors -->
+    <color name="widget_outline">#79747E</color>
+    <color name="widget_outline_variant">#CAC4D0</color>
+    <color name="widget_divider">#E0E0E0</color>
 </resources>
